--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/JiaJian/smart-farming#readme",
   "dependencies": {
-    "johnny-five": "^1.3.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "johnny-five": "^1.3.1",
+    "moment": "^2.24.0",
+    "node-dweetio": "0.0.11",
+    "socket.io": "^2.3.0"
   }
 }
